// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`MyAwesomeApp > should match snapshot 1`] = `
<div>
  <div
    data-testid="div-app"
  >
    <h1
      data-testid="first-name-title"
    >
       
      Benito
       
    </h1>
    <h3>
       
      Martinez
       
    </h3>
    <p
      class="mi-favorite-class"
    >
      Tetris, Squid Games, Super Smash bros
    </p>
    <p>
      4
    </p>
    <h1>
      Not active
    </h1>
    <p
      style="background-color: rgb(250, 250, 250); border-radius: 20px; padding: 10px; margin-top: 30px;"
    >
      {"zipCode":"ABC-123","country":"Canadá"}
    </p>
  </div>
</div>
`;

exports[`MyAwesomeApp > should match snapshot 2`] = `
<div
  data-testid="div-app"
>
  <h1
    data-testid="first-name-title"
  >
     
    Benito
     
  </h1>
  <h3>
     
    Martinez
     
  </h3>
  <p
    class="mi-favorite-class"
  >
    Tetris, Squid Games, Super Smash bros
  </p>
  <p>
    4
  </p>
  <h1>
    Not active
  </h1>
  <p
    style="background-color: rgb(250, 250, 250); border-radius: 20px; padding: 10px; margin-top: 30px;"
  >
    {"zipCode":"ABC-123","country":"Canadá"}
  </p>
</div>
`;
